@@ -1,6 +1,9 @@
-#!/usr/bin/env python
-"""Scan for serial ports.
-Part of pySerial (http://pyserial.sf.net)  (C)2002-2003 <cliechti@gmx.net>
+#! /usr/bin/env python
+"""\
+Scan for serial ports.
+
+Part of pySerial (http://pyserial.sf.net)
+(C) 2002-2003 <cliechti@gmx.net>
 
 The scan function of this module tries to open each port number
 from 0 to 255 and it builds a list of those ports where this was
@@ -16,7 +19,7 @@ def scan():
         try:
             s = serial.Serial(i)
             available.append( (i, s.portstr))
-            s.close()   #explicit close 'cause of delayed GC in java
+            s.close()   # explicit close 'cause of delayed GC in java
         except serial.SerialException:
             pass
     return available
